[package]
name = "random-cat-wallpaper"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
serde_json = "1.0.113"
wallpaper = { version = "3.2.0", features=["from_url"] }
